--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "path": "^0.12.7",
     "serve-static": "^1.15.0"
   }
