--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "path": "^0.12.7",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "uuid": "^9.0.0"
   }
 }
