--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -13,13 +13,14 @@
     "axios": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "^2.1.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
-    "start":  "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
